# gator-computational-cloud

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
backend/exec/: Drbx.py  Ec2.py  Node.py  User.py  Workflow.py
frontend/: requirements.txt
frontend/gcc_web/: manage.py
frontend/gcc_web/gcc/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
frontend/gcc_web/gcc/exec/: Drbx.py  Node.py  Workflow.py
frontend/gcc_web/gcc/migrations/: 0002_auto_20220103_1054.py  0004_alter_machine_ip.py  0005_auto_20220110_1447.py  0008_auto_20220111_1131.py
frontend/gcc_web/gcc/templates/gcc/: index.html  signup.html  user_home.html  user_workflows.html
frontend/gcc_web/gcc_web/: urls.py  wsgi.py
gcc_exec/: gcc_drbx.py  gcc_ec2.py  gcc_node.py  gcc_user.py  gcc_workflow.py  main.py
gcc_exec/tests/: test_gcc_drbx.py  test_gcc_ec2.py  test_gcc_workflow.py
gcc_exec/tests/data/spec/: spec_1.xml  spec_2.xml  spec_3.xml  spec_4.xml
gcc_exec/tests/data/upload/: test_gcc_drbx.txt
gcc_web/gcc/: admin.py  forms.py  models.py  views.py
gcc_web/gcc/migrations/: 0001_initial.py  0003_machine_machinepool.py  0006_alter_machine_pool.py  0007_machine_mac_id.py  0009_machine_status.py
gcc_web/gcc/templates/gcc/: machine_pool.html  signup_error.html  user_credentials.html
gcc_web/gcc_web/: asgi.py  settings.py
socket_service/: SocketService.py
tests/: test_workflow.py
