[tool.poetry]
name = "gator-computational-cloud"
version = "0.1.0"
description = ""
authors = ["Nathan Loria <lorian@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
python-dotenv = "^0.20.0"
django-widget-tweaks = "^1.4.12"
django-fernet-fields = "^0.6"
django-recaptcha = "^3.0.0"
mysqlclient = "^2.1.0"
boto3 = "^1.21.30"
dropbox = "^11.28.0"
xmltodict = "^0.12.0"
psutil = "^5.9.0"
paramiko = "^2.10.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
flake8 = "^4.0.1"
pylint = "^2.13.3"
taskipy = "^1.10.1"

[tool.taskipy.tasks]
black = { cmd = "black frontend backend --check", help = "Run the black checks for source code format" }
flake8 = { cmd = "flake8 frontend backend --ignore E501,E405,W503", help = "Run the flake8 checks for source code standards" }
pylint = { cmd = "pylint frontend backend --exit-zero", help = "Run the pylint checks for source code linting" }
test = { cmd = "pytest -x -s", help = "Run the test suite to ensure code correctness" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
